--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "discord.js": "^14.16.3",
     "distube": "^5.0.4",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "libsodium-wrappers": "^0.7.15",
     "spotify-web-api-node": "^5.0.2",
     "youtube-sr": "^4.3.11",
