--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-rat-bot",
   "version": "1.0.0",
   "description": "A Discord bot with music and Spotify integration",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
