--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "project-rat-bot",
   "version": "1.0.0",
-  "description": "A Discord bot with music and Spotify integration",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "heroku-postbuild": "npm prune --production"
+    "start": "node src/index.js"
   },
-  "engines": {
-    "node": "18.x"
-  },
-  "keywords": ["discord", "bot", "music", "spotify"],
-  "author": "Your Name",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.18.0",
@@ -23,7 +19,6 @@
     "discord.js": "^14.16.3",
     "distube": "^5.0.4",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "libsodium-wrappers": "^0.7.15",
     "spotify-web-api-node": "^5.0.2",
     "youtube-sr": "^4.3.11",
